# pyagentix

./: .gitignore  LICENSE  README.md  setup.cfg
src/pyagentix/: __init__.py  agent.py  chatbot.py  config.py  llm.py  metadata.py  utils.py
tests/: test_chatbot.py
