[metadata]
name = PyAgentix
version = 0.1.4
author = Vincent de Neuf
author_email = 0189vn@gmail.com
description = PyAgentix is a lightweight Python library that enables quick and easy creation of model-agnostic AI agents.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentdeneuf/pyagentix
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
